@@ -3,7 +3,9 @@
         <div class="box-title">{CLIP}
         <h1>{PIN_LINK} {ADD_LINK} {ADD_SITE_LINK} {TITLE}</h1>
         </div>
-        <ul id="sort-{MENU_ID}" class="box-content menu-links">{LINKS}</ul>
-        <div class="align-center"><!-- BEGIN pin -->{PIN_PAGE}<br /><!-- END pin -->{ADMIN_LINK}</div>
+        <div class="box-content">
+           <ul id="sort-{MENU_ID}" class="box-content menu-links">{LINKS}</ul>
+           <div class="align-center"><!-- BEGIN pin -->{PIN_PAGE}<br /><!-- END pin -->{ADMIN_LINK}</div>
+        </div>
     </div>
 </div>
