@@ -1,6 +1,6 @@
 <div id="menu-site-map">
-   <div class="box">
+   <!-- BEGIN site-map --><div class="box">
       <div class="box-title"><h1>{TITLE}</h1></div>
       <div class="box-content">{CONTENT}</div>
-   </div>
+   </div><!-- END site-map -->
 </div>
